--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=lennin
+configuracion.texto=Configurando ambiente Desarrollo***
+configuracion.autor.nombre=lennin12
 configuracion.autor.email=lennin.davila@gmail.com
