--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,5 +1,5 @@
 ## Parametros de BD MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimezone=America/Indiana/Indianapolis&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/db_springboot_cloud?serverTimezone=America/Indiana/Indianapolis&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
