--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,5 +1,5 @@
 ## Parametros de BD MySQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
+spring.datasource.url=jdbc:postgresql://microservicios-postgres12:5432/db_springboot_cloud
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
